# etf-watchdog-api

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  example.env  logging_config.json  main.py  pyproject.toml  pytest.toml  requirements.txt  test.py  test2.py
app/: db_example.py  main.py
app/dependencies/: database.py
app/internal/: database.py  models.py
app/routers/: stocks.py
app/services/: aiohttp_client_service.py  app_state.py  lifespan.py  logger_service.py  stock_service.py
backend/: main.py
backend/internal/: models.py
backend/routers/: stocks.py
backend/services/: lifespan.py  logger_service.py  stock_service.py
docs/: COPILOT.md  DESIGN.md  DOCKER.md  LOGGER.md  REFERENCES.md
docs/architecture/: DESIGN.md  LOGGER.md
docs/deployment/: DOCKER.md
docs/learning/: COPILOT.md  REFERENCES.md
docs/learning/tutorial-snippets/: README.md
docs/tutorial-snippets/: README.md  REFERENCES.md  tutorial-2.py  tutorial-3.py  tutorial-4.py  tutorial-8.py  tutorial-9.py
docs/tutorial-snippets/Basics/: tutorial-12.py  tutorial-20.py  tutorial-22.py  tutorial-23  tutorial.24.py
docs/tutorial-snippets/basics/: CORS_tutorial.py  field_tutorial.py  query_tutorial.py  tutorial-1.py  tutorial-11.py  tutorial-14.py  tutorial-17.py  tutorial-2.py  tutorial-21.py  tutorial-25.py  tutorial-26.py  tutorial-5.py  (+2 more)
example_app/: README.md  dependencies.py  main.py
example_app/routers/: items.py  users.py
frontend/: README.md  pnpm-lock.yaml
tests/: conftest.py
tests/routers/: test_stocks.py
tests/services/: test_stock_service.py
(+12 files in other folders)
