[project]
name = "etf-watchdog"
version = "0.1.0"
description = "Personal ETF tracker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.0",
    "aioresponses>=0.7.8",
    "bcrypt==3.2.2",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]>=2.11.7",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
    "python-multipart>=0.0.20",
    "requests>=2.34.2",
    "sqlmodel>=0.0.25",
]
[tool.basedpyright]
typeCheckingMode = "basic"
